DTSCCI-4141: Refactor location handling logic for improved readability and consistency